added smart planner

--- a/output/content/terms-and-conditions/index.html
+++ b/output/content/terms-and-conditions/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Microsoft Power BI Consultancy Services UK - Xsai Consulting</title>
+    <title>Excel Based Consultancy Services UK - Xsai Consulting</title>
     <meta
       name="description"
-      content="Best Microsoft Power BI Consultancy in the UK, We provide Microsoft Power BI consultancy services, data integration services, and excel-based services to your business."
+      content="Hire excel VBA consultants &amp; VSTO office automation consultants now, to centrally stored your data in a secure back-end database either on-premise or in the cloud."
     />
     <link rel="canonical" href="https://xsai.co.uk/" />
     <!-- Favicon -->
@@ -67,7 +67,7 @@
         <h2 class="mb-2 text-white">
           <img
             src="https://storage.googleapis.com/xsai/uploads/xsailogo-optimased.png"
-            alt="Xsai Logo"
+            alt=""
             style="width: 70%"
           />
         </h2>
@@ -86,7 +86,7 @@
           <div class="nav-item dropdown">
             <a
               href="#"
-              class="nav-link dropdown-toggle"
+              class="nav-link dropdown-toggle active"
               data-bs-toggle="dropdown"
               >Services</a
             >
@@ -134,15 +134,13 @@
               <a href="/saraswat-infotech" class="dropdown-item"
                 >Saraswat Infotech</a
               >
-              <a href="/quick-reports" class="dropdown-item"
-                >Quick Reports</a
-              >
+              <a href="/quick-reports" class="dropdown-item">Quick Reports</a>
             </div>
           </div>
           <div class="nav-item dropdown">
             <a
               href="#"
-              class="nav-link dropdown-toggle active"
+              class="nav-link dropdown-toggle"
               data-bs-toggle="dropdown"
               >About Us</a
             >
@@ -163,8 +161,8 @@
         <div class="owl-carousel-item position-relative">
           <img
             class="img-fluid"
-            src="https://storage.googleapis.com/xsai/uploads/hero_about.jpg"
-            alt="Xsai image"
+            src="https://storage.googleapis.com/xsai/uploads/data-Integration-services-a.jpg"
+            alt=""
           />
           <div
             class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center"
@@ -174,12 +172,10 @@
               <div class="row justify-content-start">
                 <div class="col-10 col-lg-8">
                   <h1 class="display-3 text-white animated slideInDown mb-4">
-                    About Us
+                    Terms & Conditions
                   </h1>
                   <p class="fs-6 fw-light text-white mb-4 pb-2">
-                    We are a young and creative microsoft power BI consultancy
-                    in UK and we offer consultancy services in Business
-                    Intelligence, Data Integration and Office 365 Solutions.
+                    Brief about our policies
                   </p>
                 </div>
               </div>
@@ -197,220 +193,53 @@
             data-wow-delay="0.1s"
             style="min-height: 400px"
           >
-            <h5 class="text-secondary text-uppercase mb-3">Who we are?</h5>
-            <h6>
-              Welcome to Xsai Consulting. We are a software consultancy company
-              based in London, UK. We specialise in providing Microsoft Power BI
-              consultancy services, Data Integration services and Excel-based
-              services.
+            <h6 class="text-secondary text-uppercase mb-3">
+              General information
             </h6>
-            <br />
-            <p class="mb-5">
-              If you need something more tailored to you, we provide custom web
-              development using Microsoft ASP.NET MVC Core. We can also work on
-              custom mobile app development for iOS and Android platforms to
-              make it as easy as possible for you to access the software that
-              will propel your business forward. We can support development in
-              both native and cross-platform enhancement tool Xamarin. The key
-              products we offer are in Enterprise Resource Planning (ERP). These
-              include: <br /><br />
-
-              – ERP for Facility Management (Xsai-FM)<br />
-
-              – ERP for Care Homes (Xsai-Carehome)<br />
-
-              – ERP for Distribution (Xsai-Distribution)<br /><br />
-
-              These three industries often suffer from the same pain points
-              within HR management and the handling of large amounts of
-              logistical data that needs to be accessed and managed in
-              real-time. We know how overwhelming a workload like this can
-              become using more traditional record-keeping techniques, and we do
-              not want paperwork to tie you down when one of our efficient
-              paperless systems can save you the headache. Our ERP products are
-              ideal for small to medium scale businesses. They are SaaS-based
-              solutions that are hosted securely on the Cloud.
+            <p class="mb-5 text-dark text-uppercase mb-3">
+              One of our main priorities is the privacy of our visitors. This
+              Privacy Policy document contains types of information that is
+              collected and recorded by XSai and how we use it. If you have
+              additional questions or require more information about our Privacy
+              Policy, do not hesitate to contact us through our email.
             </p>
-          </div>
-        </div>
-      </div>
-    </div>
 
-    <div class="container-xxl py-5">
-      <div class="container py-5">
-        <div class="row g-5">
-          <div class="col-lg-12 wow fadeInUp" data-wow-delay="0.1s">
-            <h1 class="mb-5">Why us?</h1>
-          </div>
-          <div class="col-lg-12">
-            <div class="row g-4 align-items-center">
-              <div class="col-sm-6">
-                <div
-                  class="bg-primary p-4 mb-4 wow fadeIn"
-                  data-wow-delay="0.3s"
-                >
-                  <i class="fa fa-users fa-2x text-white mb-3"></i>
-                  <h2 class="text-white mb-2">Our Vision</h2>
-                  <p class="text-white mb-0">
-                    We can provide truly innovative solutions. We are proud
-                    advocates of Cloud-based software solutions. We are also a
-                    Microsoft partner as we specialise in Microsoft
-                    technologies. It is our job to keep up to date with the most
-                    recent innovations in tech, including machine learning and
-                    Artificial Intelligence. Then we can apply them to real-life
-                    business scenarios so that you get the best from your
-                    investment in our IT solutions
-                  </p>
-                </div>
-                <div class="bg-secondary p-4 wow fadeIn" data-wow-delay="0.5s">
-                  <i class="fa fa-ship fa-2x text-white mb-3"></i>
-                  <h2 class="text-white mb-2">Our Values</h2>
-                  <p class="text-white mb-0">
-                    Our customers are at the core of everything we do. We do not
-                    just provide services, but also collaborate with our
-                    customers to understand their requirements, so our products
-                    are tailored to their business needs. We want you to get the
-                    best value from our solutions and to take care of tedious
-                    infrastructure so that you are free from outdated systems
-                    that prevent you from making your business a success.
-                  </p>
-                </div>
-              </div>
-              <div class="col-sm-6">
-                <div class="bg-success p-4 wow fadeIn" data-wow-delay="0.7s">
-                  <i class="fa fa-star fa-2x text-white mb-3"></i>
-                  <h2 class="text-white mb-2">Our Mission</h2>
-                  <p class="text-white mb-0">
-                    Tailored to you. No matter the size of your business or the
-                    extent of your IT skills, we are here to help. We will take
-                    the time to understand your business needs and provide you
-                    with secure, reliable solutions. Simply let us know your
-                    time frame and budget and we will ensure you get real value
-                    for investment.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="container-xxl py-5">
-      <div class="container py-5">
-        <div class="row g-5">
-          <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-            <h6 class="text-secondary text-uppercase mb-3">Some Facts</h6>
-            <h1 class="mb-5">We are best at what we do.</h1>
-            <p class="mb-5">Helping to shape the future of industry</p>
-          </div>
-          <div class="col-lg-6">
-            <div class="row g-4 align-items-center">
-              <div class="col-sm-6">
-                <div
-                  class="bg-primary p-4 mb-4 wow fadeIn"
-                  data-wow-delay="0.3s"
-                >
-                  <i class="fa fa-users fa-2x text-white mb-3"></i>
-                  <h2 class="text-white mb-2" data-toggle="counter-up">100</h2>
-                  <p class="text-white mb-0">Professional Experts</p>
-                </div>
-                <div class="bg-secondary p-4 wow fadeIn" data-wow-delay="0.5s">
-                  <i class="fa fa-ship fa-2x text-white mb-3"></i>
-                  <h2 class="text-white mb-2" data-toggle="counter-up">5000</h2>
-                  <p class="text-white mb-0">Consultancy Days</p>
-                </div>
-              </div>
-              <div class="col-sm-6">
-                <div
-                  class="bg-secondary p-4 wow fadeIn mb-4"
-                  data-wow-delay="0.5s"
-                >
-                  <i class="fa fa-ship fa-2x text-white mb-3"></i>
-                  <h2 class="text-white mb-2" data-toggle="counter-up">15</h2>
-                  <p class="text-white mb-0">Awards & Reorganisation</p>
-                </div>
-                <div class="bg-success p-4 wow fadeIn" data-wow-delay="0.7s">
-                  <i class="fa fa-star fa-2x text-white mb-3"></i>
-                  <h2 class="text-white mb-2" data-toggle="counter-up">10</h2>
-                  <p class="text-white mb-0">Clients</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="container-xxl overflow-hidden py-5 px-lg-0">
-      <div class="container feature py-5 px-lg-0">
-        <div class="row g-5 mx-lg-0">
-          <div
-            class="col-lg-6 pe-lg-4 wow fadeInRight"
-            data-wow-delay="0.1s"
-            style="min-height: 400px"
-          >
-            <div class="position-relative h-100">
-              <img
-                class="position-absolute img-fluid w-100 h-100"
-                src="https://storage.googleapis.com/xsai/uploads/inner_image_01.jpg"
-                style="object-fit: contain"
-                alt="Healthcare Web Portal"
-              />
-            </div>
-          </div>
-          <div class="col-lg-6 feature-text wow fadeInUp" data-wow-delay="0.1s">
-            <h1 class="mb-5">Long-term vision and trajectory</h1>
-            <p class="mb-4">
-              Our main mission is to provide excellent customer service. We are
-              passionate about providing premium services and helping you
-              implement them effectively until they feel like second nature to
-              use. We will guide you every step of the way through setting your
-              system up until you are ready to go live. After taking that leap,
-              we will still be here ready to help iron out any bumps you might
-              hit on the road as and when they happen. We want to help you
-              further your business by taking care of your online
-              infrastructure, allowing you to focus less on admin and more on
-              the day to day running of your business.
+            <h6 class="text-secondary text-uppercase mb-3">Log files</h6>
+            <p class="mb-5 text-dark text-uppercase mb-3">
+              Presently we do not create or maintain any log files of visitors
+              accessing our website.
             </p>
-          </div>
-        </div>
-      </div>
-    </div>
 
-    <div class="container-xxl overflow-hidden py-5 px-lg-0">
-      <div class="container feature py-5 px-lg-0">
-        <div class="row g-5 mx-lg-0">
-          <div class="col-lg-6 feature-text wow fadeInUp" data-wow-delay="0.1s">
-            <h1 class="mb-5">Strategy driven leadership development</h1>
-            <p class="mb-4">
-              The combination of our onsite team in London and our offshore
-              development teams based in Nagpur, Maharashtra and India, provides
-              you with over 70 years of experience working in IT. The
-              culmination of this knowledge and tried and tested experience
-              means we can guarantee the very best services to help you manage
-              your business. It’s also demonstrative of our global mindset and
-              the collaborative culture we promote. This most definitely extends
-              to our users as we want to combine our knowledge and technical
-              proficiency with your needs and goals for your business. You can
-              be supported by our network of over 1000 consultants and industry
-              professionals right now by giving us a call.
+            <h6 class="text-secondary text-uppercase mb-3">Privacy policies</h6>
+            <p class="mb-5 text-dark text-uppercase mb-3">
+              You may consult this list to find the Privacy Policy for each of
+              the advertising partners of XSai. Third-party ad servers or ad
+              networks use technologies like cookies, JavaScript, or Web Beacons
+              in their respective advertisements and links that appear on XSai,
+              which are sent directly to users’ browsers. They automatically
+              receive your IP address when this occurs. These technologies are
+              used to measure the effectiveness of their advertising campaigns
+              and/or to personalize the advertising content that you see on
+              websites you visit. Note that XSai has no access to or control
+              over these cookies used by third-party advertisers. However, XSai
+              website presently does not host any advertising networks.
             </p>
-          </div>
 
-          <div
-            class="col-lg-6 pe-lg-4 wow fadeInRight"
-            data-wow-delay="0.1s"
-            style="min-height: 400px"
-          >
-            <div class="position-relative h-100">
-              <img
-                class="position-absolute img-fluid w-100 h-100"
-                src="https://storage.googleapis.com/xsai/uploads/service_07.jpg"
-                style="object-fit: contain"
-                alt="Healthcare Web Portal"
-              />
-            </div>
+            <h6 class="text-secondary text-uppercase mb-3">
+              Third party policies
+            </h6>
+            <p class="mb-5 text-dark text-uppercase mb-3">
+              Incubator’s Privacy Policy does not apply to other advertisers or
+              websites. Thus, we are advising you to consult the respective
+              Privacy Policies of these third-party ad servers for more detailed
+              information. It may include their practices and instructions about
+              how to opt-out of certain options. You may find a complete list of
+              these Privacy Policies and their links here: Privacy Policy Links.
+              You can choose to disable cookies through your individual browser
+              options. To know more detailed information about cookie management
+              with specific web browsers, it can be found at the browsers’
+              respective websites.
+            </p>
           </div>
         </div>
       </div>
@@ -480,7 +309,7 @@
           <div class="col-lg-3 col-md-6">
             <img
               src="https://storage.googleapis.com/customer-website-images/xsai/xsailogo-optimased.png"
-              alt="Logo"
+              alt=""
               style="width: 80%"
             />
             <p class="mb-2">
@@ -495,8 +324,7 @@
           <div class="row">
             <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
               &copy; <a class="border-bottom" href="/">XSai Consulting</a>, All
-              Right Reserved.
-              &nbsp;
+              Right Reserved.&nbsp;
 
               <a class="border-bottom" href="/privacy-policy">Privacy Policy</a>
 
@@ -534,5 +362,57 @@
 
     <!-- Template Javascript -->
     <script src="https://storage.googleapis.com/layout.kreatewebsites.com/shipping-company-website-template/js/main.js"></script>
+    <!-- Code injected by live-server -->
+    <script>
+      // <![CDATA[  <-- For SVG support
+      if ("WebSocket" in window) {
+        (function () {
+          function refreshCSS() {
+            var sheets = [].slice.call(document.getElementsByTagName("link"));
+            var head = document.getElementsByTagName("head")[0];
+            for (var i = 0; i < sheets.length; ++i) {
+              var elem = sheets[i];
+              var parent = elem.parentElement || head;
+              parent.removeChild(elem);
+              var rel = elem.rel;
+              if (
+                (elem.href && typeof rel != "string") ||
+                rel.length == 0 ||
+                rel.toLowerCase() == "stylesheet"
+              ) {
+                var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, "");
+                elem.href =
+                  url +
+                  (url.indexOf("?") >= 0 ? "&" : "?") +
+                  "_cacheOverride=" +
+                  new Date().valueOf();
+              }
+              parent.appendChild(elem);
+            }
+          }
+          var protocol =
+            window.location.protocol === "http:" ? "ws://" : "wss://";
+          var address =
+            protocol + window.location.host + window.location.pathname + "/ws";
+          var socket = new WebSocket(address);
+          socket.onmessage = function (msg) {
+            if (msg.data == "reload") window.location.reload();
+            else if (msg.data == "refreshcss") refreshCSS();
+          };
+          if (
+            sessionStorage &&
+            !sessionStorage.getItem("IsThisFirstTime_Log_From_LiveServer")
+          ) {
+            console.log("Live reload enabled.");
+            sessionStorage.setItem("IsThisFirstTime_Log_From_LiveServer", true);
+          }
+        })();
+      } else {
+        console.error(
+          "Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading."
+        );
+      }
+      // ]]>
+    </script>
   </body>
 </html>
