--- a/output/content/services/index_gen.html
+++ b/output/content/services/index_gen.html
@@ -446,9 +446,9 @@ We involve our QA team right from the beginning so that features rolled out are 
         <div class="row g-5">
             <div class="col-lg-3 col-md-6">
                 <h4 class="text-light mb-4">Address</h4>
-                <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@xsai.co.uk</p>
+                <p class="mb-2"><i class="fa fa-envelope me-3"></i>enquiries@xsai.co.uk</p>
                 <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>   UK
-                    <br/>Kemp House, 160 City Rd
+                    <br/>Kemp House, 128 City Rd
                     London EC1V 2NX <br/>United Kingdon</p>
                 <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+44(0) 203-1292040 </p>
             
@@ -498,7 +498,7 @@ We involve our QA team right from the beginning so that features rolled out are 
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://www.kreatewebsites.com/credit-removal". Thank you for your support. ***/-->
-                    Designed By Kreate Websites
+                    Designed By Xsai Consulting
                 </div>
             </div>
         </div>
