--- a/output/content/about/clients/index.html
+++ b/output/content/about/clients/index.html
@@ -116,10 +116,7 @@
               >Products</a
             >
             <div class="dropdown-menu fade-up m-0">
-              <a href="/xsai-carehouse" class="dropdown-item"
-                >xSai - CareHome</a
-              >
-              <a href="/xsai-fm" class="dropdown-item">xSai - FM</a>
+              <a href="/smart-planner" class="dropdown-item">Smart Planner</a>
             </div>
           </div>
           <a href="/blogs" class="nav-item nav-link">Blogs</a>
