--- a/output/content/index.html
+++ b/output/content/index.html
@@ -84,42 +84,19 @@
         <div class="navbar-nav ms-auto p-4 p-lg-0">
           <a href="/" class="nav-item nav-link active">Home</a>
           <div class="nav-item dropdown">
-            <a
-              href="#"
-              class="nav-link dropdown-toggle"
-              data-bs-toggle="dropdown"
-              >Services</a
-            >
+            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
             <div class="dropdown-menu fade-up m-0">
-              <a href="/services/business-intelligence" class="dropdown-item"
-                >Business Intelligence</a
-              >
-              <a href="/services/excel-services" class="dropdown-item"
-                >Excel Services</a
-              >
-              <a href="/services/data-integration" class="dropdown-item"
-                >Data Integration</a
-              >
-              <a href="/services/mobile-app-development" class="dropdown-item"
-                >Mobile App Development</a
-              >
-              <a href="/services/web-development" class="dropdown-item"
-                >Web Development</a
-              >
+              <a href="/services/business-intelligence" class="dropdown-item">Business Intelligence</a>
+              <a href="/services/excel-services" class="dropdown-item">Excel Services</a>
+              <a href="/services/data-integration" class="dropdown-item">Data Integration</a>
+              <a href="/services/mobile-app-development" class="dropdown-item">Mobile App Development</a>
+              <a href="/services/web-development" class="dropdown-item">Web Development</a>
             </div>
           </div>
           <div class="nav-item dropdown">
-            <a
-              href="#"
-              class="nav-link dropdown-toggle"
-              data-bs-toggle="dropdown"
-              >Products</a
-            >
+            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" >Products</a>
             <div class="dropdown-menu fade-up m-0">
-              <a href="/xsai-carehouse" class="dropdown-item"
-                >xSai - CareHome</a
-              >
-              <a href="/xsai-fm" class="dropdown-item">xSai - FM</a>
+              <a href="/smart-planner" class="dropdown-item">Smart Planner</a>
             </div>
           </div>
           <a href="/blogs" class="nav-item nav-link">Blogs</a>
@@ -131,10 +108,9 @@
               >Our Partners</a
             >
             <div class="dropdown-menu fade-up m-0">
-              <a href="/saraswat-infotech" class="dropdown-item"
-                >Saraswat Infotech</a
-              >
+              <a href="/saraswat-infotech" class="dropdown-item">Saraswat Infotech</a>
               <a href="/quick-reports" class="dropdown-item">Quick Reports</a>
+              <a href="https://www.xsai.co.uk/dataknobs/" class="dropdown-item">Dataknobs</a>
             </div>
           </div>
           <div class="nav-item dropdown">
@@ -488,11 +464,13 @@
           <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.3s">
             <div class="service-item p-4">
               <div class="overflow-hidden mb-4">
+                <!--
                 <img
                   class="img-fluid"
                   src="https://storage.googleapis.com/xsai/uploads/portfolio_01-1280x960.jpg"
                   alt="Portfolio"
                 />
+                -->
               </div>
               <h4 class="mb-3">
                 Improving Customer and User Experience in the Hospitality
@@ -506,12 +484,14 @@
           <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.5s">
             <div class="service-item p-4">
               <div class="overflow-hidden mb-4">
+                <!--
                 <img
                   class="img-fluid"
                   src="https://storage.googleapis.com/xsai/uploads/spc-chart-720x962.jpg"
                   alt="Chart"
                   style="width: 70%"
                 />
+                -->
               </div>
               <h4 class="mb-3">
                 A sequel to my article “Task Tracker off-line web application
@@ -525,11 +505,13 @@
           <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.7s">
             <div class="service-item p-4">
               <div class="overflow-hidden mb-4">
+                <!-- 
                 <img
                   class="img-fluid"
                   src="https://storage.googleapis.com/xsai/uploads/frustrated-user.jpg"
                   alt="User"
                 />
+                -->
               </div>
               <h4 class="mb-3">Frustrated with losing internet connection?</h4>
               <a class="btn-slide mt-2" href=""
@@ -541,183 +523,10 @@
       </div>
     </div>
 
-    <div class="container-fluid p-0">
-      <div class="owl-carousel header-carousel position-relative">
-        <div class="owl-carousel-item position-relative">
-          <img
-            class="img-fluid"
-            src="https://storage.googleapis.com/xsai/uploads/case-study-2.jpg"
-            alt="Case Study"
-            style="object-fit: cover; height: 100%"
-          />
-          <div
-            class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center"
-            style="background: rgba(6, 3, 21, 0.5)"
-          >
-            <div class="container">
-              <div class="row justify-content-start">
-                <div class="col-12 col-lg-8">
-                  <h1
-                    class="display-4 text-white animated slideInDown mb-4 text-center"
-                  >
-                    Point of Sale Solution (BPOS)
-                  </h1>
-                  <p class="fs-6 fw-light text-white mb-4 pb-4 text-center">
-                    Smart application developed to bring ease of doing business.
-                    This Tablet-based Application will be a solution for retail
-                    shops and restaurants. The application basically has two
-                    sections: Restaurant and Retail.
-                  </p>
 
-                  <div class="d-flex mb-4 wow fadeInUp" data-wow-delay="0.3s">
-                    <i
-                      class="fa fa-calculator text-primary fa-2x flex-shrink-0"
-                    ></i>
-                    <div class="ms-4">
-                      <h5 class="text-white">Valuation Services</h5>
-                    </div>
-                  </div>
-                  <div class="d-flex mb-4 wow fadeIn" data-wow-delay="0.5s">
-                    <i
-                      class="fa fa-chart-line text-primary fa-2x flex-shrink-0"
-                    ></i>
-                    <div class="ms-4">
-                      <h5 class="text-white">
-                        Development of Financial Models
-                      </h5>
-                    </div>
-                  </div>
-                  <div class="d-flex mb-4 wow fadeInUp" data-wow-delay="0.7s">
-                    <i
-                      class="fa fa-briefcase text-primary fa-2x flex-shrink-0"
-                    ></i>
-                    <div class="ms-4">
-                      <h5 class="text-white">Corporate Financial Advisory</h5>
-                    </div>
-                  </div>
-                  <div class="d-flex mb-0 wow fadeInUp" data-wow-delay="0.9s">
-                    <i
-                      class="fa fa-handshake text-primary fa-2x flex-shrink-0"
-                    ></i>
-                    <div class="ms-4">
-                      <h5 class="text-white">Deal Structuring</h5>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
 
-    <div class="container-fluid p-0">
-      <div class="owl-carousel header-carousel position-relative">
-        <div class="owl-carousel-item position-relative">
-          <img
-            class="img-fluid"
-            src="https://storage.googleapis.com/xsai/uploads/case-study-1.jpg"
-            alt="Case Study 1"
-            style="object-fit: cover; height: 100%"
-          />
-          <div
-            class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center"
-            style="background: rgba(6, 3, 21, 0.5)"
-          >
-            <div class="container">
-              <div class="row justify-content-start">
-                <div class="col-12 col-lg-8">
-                  <h1
-                    class="display-4 text-white animated slideInDown mb-4 text-center"
-                  >
-                    Online ROTA System For Volunteer
-                  </h1>
-                  <p class="fs-6 fw-light text-white mb-4 pb-4 text-center">
-                    Felix is one of the leading food charities within London. It
-                    helps underprivileged communities by delivering surplus food
-                    to charities who provide meals and food parcels to the most
-                    vulnerable people. The association with Felix commenced last
-                    year and since then we have developed an online ROTA system
-                    to help their volunteers book delivery and warehouse shifts
-                    up to six weeks in advance. With many types of mortgages and
-                    interest rates on the market, it can be confusing to know
-                    which one is right for you, so we’ve outlined some of the
-                    basic below.
-                  </p>
 
-                  <div class="d-flex mb-4 wow fadeInUp" data-wow-delay="0.3s">
-                    <i
-                      class="fa fa-chart-line text-primary fa-2x flex-shrink-0"
-                    ></i>
-                    <div class="ms-4">
-                      <h5 class="text-white">Increase Sales</h5>
-                    </div>
-                  </div>
-                  <div class="d-flex mb-4 wow fadeIn" data-wow-delay="0.5s">
-                    <i class="fa fa-cogs text-primary fa-2x flex-shrink-0"></i>
-                    <div class="ms-4">
-                      <h5 class="text-white">Automate Lead Management</h5>
-                    </div>
-                  </div>
-                  <div class="d-flex mb-0 wow fadeInUp" data-wow-delay="0.7s">
-                    <i
-                      class="fa fa-tachometer-alt text-primary fa-2x flex-shrink-0"
-                    ></i>
-                    <div class="ms-4">
-                      <h5 class="text-white">Process Automation</h5>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
 
-    <div class="container-fluid p-0">
-      <div class="owl-carousel header-carousel position-relative">
-        <div class="owl-carousel-item position-relative">
-          <img
-            class="img-fluid"
-            src="https://storage.googleapis.com/xsai/uploads/case-study-2.jpg"
-            alt="Case Study 2"
-            style="object-fit: cover; height: 100%"
-          />
-          <div
-            class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center"
-            style="background: rgba(6, 3, 21, 0.5)"
-          >
-            <div class="container">
-              <div class="row justify-content-start">
-                <div class="col-12 col-lg-8">
-                  <h1
-                    class="display-4 text-white animated slideInDown mb-4 text-center"
-                  >
-                    Web Portal for Blood Donors for Charitable Purpose
-                  </h1>
-                  <p class="fs-6 fw-light text-white mb-4 pb-4 text-center">
-                    The challenge was tight delivery schedule of four weeks. But
-                    thanks to Agile development methodology and iterative and
-                    incremental development approach. Our customer was engaged
-                    with the team during each stage of development and provided
-                    them constant feedback based on intermediate milestones to
-                    match their requirements.
-                  </p>
-
-                  <a
-                    href="#services"
-                    class="btn btn-primary wow fadeInUp"
-                    data-wow-delay="0.9s"
-                    >Our Services</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
 
     <div
       class="container-xxl overflow-hidden py-5 px-lg-0 d-flex justify-content-center align-items-center"
@@ -839,7 +648,7 @@
               >
             </div>
             <div class="col-md-6 text-center text-md-end">
-              Designed By Kreate Websites
+              Designed By <a href="dataknobs/">Kreate Websites</a>
             </div>
           </div>
         </div>
