--- a/output/content/privacy-policy/index.html
+++ b/output/content/privacy-policy/index.html
@@ -117,10 +117,7 @@
               >Products</a
             >
             <div class="dropdown-menu fade-up m-0">
-              <a href="/xsai-carehouse" class="dropdown-item"
-                >xSai - CareHome</a
-              >
-              <a href="/xsai-fm" class="dropdown-item">xSai - FM</a>
+              <a href="/smart-planner" class="dropdown-item">Smart Planner</a>
             </div>
           </div>
           <a href="/blogs" class="nav-item nav-link">Blogs</a>
@@ -132,12 +129,9 @@
               >Our Partners</a
             >
             <div class="dropdown-menu fade-up m-0">
-              <a href="/saraswat-infotech" class="dropdown-item"
-                >Saraswat Infotech</a
-              >
-              <a href="/quick-reports" class="dropdown-item"
-                >Quick Reports</a
-              >
+              <a href="/saraswat-infotech" class="dropdown-item">Saraswat Infotech</a>
+              <a href="/quick-reports" class="dropdown-item">Quick Reports</a>
+              <a href="https://www.xsai.co.uk/dataknobs/" class="dropdown-item">Dataknobs</a>
             </div>
           </div>
           <div class="nav-item dropdown">
