--- a/output/content/index-test.html
+++ b/output/content/index-test.html
@@ -35,23 +35,23 @@
 
     <!-- Libraries Stylesheet -->
     <link
-      href="https://storage.googleapis.com/layout.kreatewebsites.com/shipping-company-website-template/lib/animate/animate.min.css"
+      href="shipping-company-website-template/lib/animate/animate.min.css"
       rel="stylesheet"
     />
     <link
-      href="https://storage.googleapis.com/layout.kreatewebsites.com/shipping-company-website-template/lib/owlcarousel/assets/owl.carousel.min.css"
+      href="shipping-company-website-template/lib/owlcarousel/assets/owl.carousel.min.css"
       rel="stylesheet"
     />
 
     <!-- Customized Bootstrap Stylesheet -->
     <link
-      href="https://storage.googleapis.com/layout.kreatewebsites.com/shipping-company-website-template/css/bootstrap.min.css"
+      href="shipping-company-website-template/css/bootstrap.min.css"
       rel="stylesheet"
     />
 
     <!-- Template Stylesheet -->
     <link
-      href="https://storage.googleapis.com/layout.kreatewebsites.com/shipping-company-website-template/css/style.css"
+      href="shipping-company-website-template/css/style.css"
       rel="stylesheet"
     />
   </head>
@@ -84,39 +84,18 @@
         <div class="navbar-nav ms-auto p-4 p-lg-0">
           <a href="/" class="nav-item nav-link active">Home</a>
           <div class="nav-item dropdown">
-            <a
-              href="#"
-              class="nav-link dropdown-toggle"
-              data-bs-toggle="dropdown"
-              >Services</a
-            >
+            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
             <div class="dropdown-menu fade-up m-0">
-              <a href="/services/business-intelligence" class="dropdown-item"
-                >Business Intelligence</a
-              >
-              <a href="/services/excel-services" class="dropdown-item"
-                >Excel Services</a
-              >
-              <a href="/services/data-integration" class="dropdown-item"
-                >Data Integration</a
-              >
-              <a href="/services/mobile-app-development" class="dropdown-item"
-                >Mobile App Development</a
-              >
-              <a href="/services/web-development" class="dropdown-item"
-                >Web Development</a
-              >
+              <a href="/services/business-intelligence" class="dropdown-item">Business Intelligence</a>
+              <a href="/services/excel-services" class="dropdown-item">Excel Services</a>
+              <a href="/services/data-integration" class="dropdown-item">Data Integration</a>
+              <a href="/services/mobile-app-development" class="dropdown-item">Mobile App Development</a>
+              <a href="/services/web-development" class="dropdown-item">Web Development</a>
             </div>
           </div>
           <div class="nav-item dropdown">
-            <a
-              href="#"
-              class="nav-link dropdown-toggle"
-              data-bs-toggle="dropdown"
-              >Products</a
-            >
+            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" >Products</a>
             <div class="dropdown-menu fade-up m-0">
-            
               <a href="/smart-planner" class="dropdown-item">Smart Planner</a>
             </div>
           </div>
@@ -129,10 +108,9 @@
               >Our Partners</a
             >
             <div class="dropdown-menu fade-up m-0">
-              <a href="/saraswat-infotech" class="dropdown-item"
-                >Saraswat Infotech</a
-              >
+              <a href="/saraswat-infotech" class="dropdown-item">Saraswat Infotech</a>
               <a href="/quick-reports" class="dropdown-item">Quick Reports</a>
+              <a href="https://www.xsai.co.uk/dataknobs/" class="dropdown-item">Dataknobs</a>
             </div>
           </div>
           <div class="nav-item dropdown">
@@ -670,7 +648,7 @@
               >
             </div>
             <div class="col-md-6 text-center text-md-end">
-              Designed By Kreate Websites
+              Designed By <a href="dataknobs/">Kreate Websites</a>
             </div>
           </div>
         </div>
@@ -688,13 +666,13 @@
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://storage.googleapis.com/layout.kreatewebsites.com/shipping-company-website-template/lib/wow/wow.min.js"></script>
-    <script src="https://storage.googleapis.com/layout.kreatewebsites.com/shipping-company-website-template/lib/easing/easing.min.js"></script>
-    <script src="https://storage.googleapis.com/layout.kreatewebsites.com/shipping-company-website-template/lib/waypoints/waypoints.min.js"></script>
-    <script src="https://storage.googleapis.com/layout.kreatewebsites.com/shipping-company-website-template/lib/counterup/counterup.min.js"></script>
-    <script src="https://storage.googleapis.com/layout.kreatewebsites.com/shipping-company-website-template/lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="shipping-company-website-template/lib/wow/wow.min.js"></script>
+    <script src="shipping-company-website-template/lib/easing/easing.min.js"></script>
+    <script src="shipping-company-website-template/lib/waypoints/waypoints.min.js"></script>
+    <script src="shipping-company-website-template/lib/counterup/counterup.min.js"></script>
+    <script src="shipping-company-website-template/lib/owlcarousel/owl.carousel.min.js"></script>
 
     <!-- Template Javascript -->
-    <script src="https://storage.googleapis.com/layout.kreatewebsites.com/shipping-company-website-template/js/main.js"></script>
+    <script src="shipping-company-website-template/js/main.js"></script>
   </body>
 </html>
