--- a/output/content/index-test2.html
+++ b/output/content/index-test2.html
@@ -11,7 +11,7 @@
     <link rel="canonical" href="https://xsai.co.uk/" />
     <!-- Favicon -->
     <link
-      href="https://storage.googleapis.com/xsai/uploads/logo_footer_02.png"
+      href="https://storage.googleapis.com/xsai/uploads/logo_footer_02.webp"
       rel="icon"
     />
 
@@ -35,23 +35,23 @@
 
     <!-- Libraries Stylesheet -->
     <link
-      href="https://storage.googleapis.com/layout.kreatewebsites.com/shipping-company-website-template/lib/animate/animate.min.css"
+      href="shipping-company-website-template/lib/animate/animate.min.css"
       rel="stylesheet"
     />
     <link
-      href="https://storage.googleapis.com/layout.kreatewebsites.com/shipping-company-website-template/lib/owlcarousel/assets/owl.carousel.min.css"
+      href="shipping-company-website-template/lib/owlcarousel/assets/owl.carousel.min.css"
       rel="stylesheet"
     />
 
     <!-- Customized Bootstrap Stylesheet -->
     <link
-      href="https://storage.googleapis.com/layout.kreatewebsites.com/shipping-company-website-template/css/bootstrap.min.css"
+      href="shipping-company-website-template/css/bootstrap.min.css"
       rel="stylesheet"
     />
 
     <!-- Template Stylesheet -->
     <link
-      href="https://storage.googleapis.com/layout.kreatewebsites.com/shipping-company-website-template/css/style.css"
+      href="shipping-company-website-template/css/style.css"
       rel="stylesheet"
     />
   </head>
@@ -66,7 +66,7 @@
       >
         <h2 class="mb-2 text-white">
           <img
-            src="https://storage.googleapis.com/xsai/uploads/xsailogo-optimased.png"
+            src="https://storage.googleapis.com/xsai/uploads/xsailogo-optimased.webp"
             alt="Xsai Logo"
             style="width: 70%"
           />
@@ -84,39 +84,18 @@
         <div class="navbar-nav ms-auto p-4 p-lg-0">
           <a href="/" class="nav-item nav-link active">Home</a>
           <div class="nav-item dropdown">
-            <a
-              href="#"
-              class="nav-link dropdown-toggle"
-              data-bs-toggle="dropdown"
-              >Services</a
-            >
+            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
             <div class="dropdown-menu fade-up m-0">
-              <a href="/services/business-intelligence" class="dropdown-item"
-                >Business Intelligence</a
-              >
-              <a href="/services/excel-services" class="dropdown-item"
-                >Excel Services</a
-              >
-              <a href="/services/data-integration" class="dropdown-item"
-                >Data Integration</a
-              >
-              <a href="/services/mobile-app-development" class="dropdown-item"
-                >Mobile App Development</a
-              >
-              <a href="/services/web-development" class="dropdown-item"
-                >Web Development</a
-              >
+              <a href="/services/business-intelligence" class="dropdown-item">Business Intelligence</a>
+              <a href="/services/excel-services" class="dropdown-item">Excel Services</a>
+              <a href="/services/data-integration" class="dropdown-item">Data Integration</a>
+              <a href="/services/mobile-app-development" class="dropdown-item">Mobile App Development</a>
+              <a href="/services/web-development" class="dropdown-item">Web Development</a>
             </div>
           </div>
           <div class="nav-item dropdown">
-            <a
-              href="#"
-              class="nav-link dropdown-toggle"
-              data-bs-toggle="dropdown"
-              >Products</a
-            >
+            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" >Products</a>
             <div class="dropdown-menu fade-up m-0">
-            
               <a href="/smart-planner" class="dropdown-item">Smart Planner</a>
             </div>
           </div>
@@ -129,10 +108,9 @@
               >Our Partners</a
             >
             <div class="dropdown-menu fade-up m-0">
-              <a href="/saraswat-infotech" class="dropdown-item"
-                >Saraswat Infotech</a
-              >
+              <a href="/saraswat-infotech" class="dropdown-item">Saraswat Infotech</a>
               <a href="/quick-reports" class="dropdown-item">Quick Reports</a>
+              <a href="https://www.xsai.co.uk/dataknobs/" class="dropdown-item">Dataknobs</a>
             </div>
           </div>
           <div class="nav-item dropdown">
@@ -169,7 +147,7 @@
             <div class="container">
               <div class="row justify-content-start">
                 <img
-                  src="https://storage.googleapis.com/xsai/uploads/awards_2024_transprent.png"
+                  src="https://storage.googleapis.com/xsai/uploads/awards_2024_transprent.webp"
                   alt="Awards 2024"
                   class="d-none d-lg-block"
                   style="width: 20%"
@@ -230,7 +208,7 @@
       style="min-height: 100vh"
     >
       <img
-        src="https://storage.googleapis.com/xsai/uploads/awards_2024_transprent.png"
+        src="https://storage.googleapis.com/xsai/uploads/awards_2024_transprent.webp"
         alt="Awards 2024"
         class="img-fluid"
         style="max-width: 100%; height: auto"
@@ -257,28 +235,28 @@
             <div class="row g-4 mb-5">
               <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
                 <img
-                  src="https://storage.googleapis.com/xsai/uploads/graphic_1.png"
+                  src="https://storage.googleapis.com/xsai/uploads/graphic_1.webp"
                   alt="Digital Transformation"
                 />
                 <h6>Result focused, Agile workflow</h6>
               </div>
               <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
                 <img
-                  src="https://storage.googleapis.com/xsai/uploads/graphic_3.png"
+                  src="https://storage.googleapis.com/xsai/uploads/graphic_3.webp"
                   alt=""Result Focused
                 />
                 <h6>Planning & Tracking</h6>
               </div>
               <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
                 <img
-                  src="https://storage.googleapis.com/xsai/uploads/graphic_4.png"
+                  src="https://storage.googleapis.com/xsai/uploads/graphic_4.webp"
                   alt="Planning"
                 />
                 <h6>Expert Team with 24X7 Support</h6>
               </div>
               <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
                 <img
-                  src="https://storage.googleapis.com/xsai/uploads/graphic_2.png"
+                  src="https://storage.googleapis.com/xsai/uploads/graphic_2.webp"
                   alt="Expert Team"
                 />
                 <h6>Excellent Teamwork</h6>
@@ -442,31 +420,31 @@
         >
           <div class="d-flex align-items-end mb-4">
             <img
-              src="https://storage.googleapis.com/xsai/uploads/client_1.png"
+              src="https://storage.googleapis.com/xsai/uploads/client_1.webp"
               style="width: 40%"
             />
           </div>
           <div class="d-flex align-items-end mb-4">
             <img
-              src="https://storage.googleapis.com/xsai/uploads/client_2.png"
+              src="https://storage.googleapis.com/xsai/uploads/client_2.webp"
               style="width: 40%"
             />
           </div>
           <div class="d-flex align-items-end mb-4">
             <img
-              src="https://storage.googleapis.com/xsai/uploads/client_4.png"
+              src="https://storage.googleapis.com/xsai/uploads/client_4.webp"
               style="width: 40%"
             />
           </div>
           <div class="d-flex align-items-end mb-4">
             <img
-              src="https://storage.googleapis.com/xsai/uploads/client_6.png"
+              src="https://storage.googleapis.com/xsai/uploads/client_6.webp"
               style="width: 40%"
             />
           </div>
           <div class="d-flex align-items-end mb-4">
             <img
-              src="https://storage.googleapis.com/xsai/uploads/client_9.png"
+              src="https://storage.googleapis.com/xsai/uploads/client_9.webp"
               style="width: 40%"
             />
           </div>
@@ -643,7 +621,7 @@
           </div>
           <div class="col-lg-3 col-md-6">
             <img
-              src="https://storage.googleapis.com/customer-website-images/xsai/xsailogo-optimased.png"
+              src="https://storage.googleapis.com/customer-website-images/xsai/xsailogo-optimased.webp"
               alt="Website image"
               style="width: 80%"
             />
@@ -670,7 +648,7 @@
               >
             </div>
             <div class="col-md-6 text-center text-md-end">
-              Designed By Kreate Websites
+              Designed By <a href="dataknobs/">Kreate Websites</a>
             </div>
           </div>
         </div>
@@ -688,13 +666,13 @@
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://storage.googleapis.com/layout.kreatewebsites.com/shipping-company-website-template/lib/wow/wow.min.js"></script>
-    <script src="https://storage.googleapis.com/layout.kreatewebsites.com/shipping-company-website-template/lib/easing/easing.min.js"></script>
-    <script src="https://storage.googleapis.com/layout.kreatewebsites.com/shipping-company-website-template/lib/waypoints/waypoints.min.js"></script>
-    <script src="https://storage.googleapis.com/layout.kreatewebsites.com/shipping-company-website-template/lib/counterup/counterup.min.js"></script>
-    <script src="https://storage.googleapis.com/layout.kreatewebsites.com/shipping-company-website-template/lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="shipping-company-website-template/lib/wow/wow.min.js"></script>
+    <script src="shipping-company-website-template/lib/easing/easing.min.js"></script>
+    <script src="shipping-company-website-template/lib/waypoints/waypoints.min.js"></script>
+    <script src="shipping-company-website-template/lib/counterup/counterup.min.js"></script>
+    <script src="shipping-company-website-template/lib/owlcarousel/owl.carousel.min.js"></script>
 
     <!-- Template Javascript -->
-    <script src="https://storage.googleapis.com/layout.kreatewebsites.com/shipping-company-website-template/js/main.js"></script>
+    <script src="shipping-company-website-template/js/main.js"></script>
   </body>
 </html>
