--- a/output/content/services/index.html
+++ b/output/content/services/index.html
@@ -43,7 +43,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="" class="nav-item nav-link active">Home</a>
+                <a href="https://www.xsai.co.uk/" class="nav-item nav-link active">Home</a>
                 <a href="services/" class="nav-item nav-link">Services</a>
                 <a href="aboutus/" class="nav-item nav-link">Products</a>
                 <a href="portfolio/" class="nav-item nav-link">Blogs</a>
