--- a/output/content/services/web-development/index.html
+++ b/output/content/services/web-development/index.html
@@ -57,100 +57,48 @@
   </head>
 
   <body>
-    <nav
-      class="navbar navbar-expand-lg bg-white navbar-light shadow border-top border-5 border-primary sticky-top p-0"
-    >
-      <a
-        href="/"
-        class="navbar-brand bg-primary d-flex align-items-center px-4 px-lg-5"
-      >
+    <nav class="navbar navbar-expand-lg bg-white navbar-light shadow border-top border-5 border-primary sticky-top p-0" >
+      <a href="/" class="navbar-brand bg-primary d-flex align-items-center px-4 px-lg-5" >
         <h2 class="mb-2 text-white">
-          <img
-            src="https://storage.googleapis.com/xsai/uploads/xsailogo-optimased.png"
-            alt="Logo XSAI"
-            style="width: 70%"
-          />
+          <img src="https://storage.googleapis.com/xsai/uploads/xsailogo-optimased.png" alt="Xsai Logo" style="width: 70%" />
         </h2>
       </a>
-      <button
-        type="button"
-        class="navbar-toggler me-4"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarCollapse"
-      >
+      <button type="button" class="navbar-toggler me-4"  data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto p-4 p-lg-0">
           <a href="/" class="nav-item nav-link">Home</a>
           <div class="nav-item dropdown">
-            <a
-              href="#"
-              class="nav-link dropdown-toggle active"
-              data-bs-toggle="dropdown"
-              >Services</a
-            >
+            <a  href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
             <div class="dropdown-menu fade-up m-0">
-              <a href="/services/business-intelligence" class="dropdown-item"
-                >Business Intelligence</a
-              >
-              <a href="/services/excel-services" class="dropdown-item"
-                >Excel Services</a
-              >
-              <a href="/services/data-integration" class="dropdown-item"
-                >Data Integration</a
-              >
-              <a href="/services/mobile-app-development" class="dropdown-item"
-                >Mobile App Development</a
-              >
-              <a href="/services/web-development" class="dropdown-item"
-                >Web Development</a
-              >
+              <a href="/services/business-intelligence" class="dropdown-item">Business Intelligence</a>
+              <a href="/services/excel-services" class="dropdown-item" >Excel Services</a>
+              <a href="/services/data-integration" class="dropdown-item">Data Integration</a>
+              <a href="/services/mobile-app-development" class="dropdown-item">Mobile App Development</a>
+              <a href="/services/web-development" class="dropdown-item">Web Development</a>
             </div>
           </div>
           <div class="nav-item dropdown">
-            <a
-              href="#"
-              class="nav-link dropdown-toggle"
-              data-bs-toggle="dropdown"
-              >Products</a
-            >
+            <a href="#" class="nav-link dropdown-toggle active"  data-bs-toggle="dropdown" >Products</a>
             <div class="dropdown-menu fade-up m-0">
-              <a href="/xsai-carehouse" class="dropdown-item"
-                >xSai - CareHome</a
-              >
-              <a href="/xsai-fm" class="dropdown-item">xSai - FM</a>
+              <a href="/smart-planner" class="dropdown-item">Smart Planner</a>
             </div>
           </div>
-          <a href="/blogs" class="nav-item nav-link">Blogs</a>
+          <a href="/blogs" class="nav-item nav-link ">Blogs</a>
           <div class="nav-item dropdown">
-            <a
-              href="#"
-              class="nav-link dropdown-toggle"
-              data-bs-toggle="dropdown"
-              >Our Partners</a
-            >
+            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Our Partners</a>
             <div class="dropdown-menu fade-up m-0">
-              <a href="/saraswat-infotech" class="dropdown-item"
-                >Saraswat Infotech</a
-              >
-              <a href="/quick-reports" class="dropdown-item"
-                >Quick Reports</a
-              >
+              <a href="/saraswat-infotech" class="dropdown-item">Saraswat Infotech</a>
+              <a href="/quick-reports" class="dropdown-item">Quick Reports</a>
+              <a href="https://www.xsai.co.uk/dataknobs/" class="dropdown-item">Dataknobs</a>
             </div>
           </div>
           <div class="nav-item dropdown">
-            <a
-              href="#"
-              class="nav-link dropdown-toggle"
-              data-bs-toggle="dropdown"
-              >About Us</a
-            >
+            <a href="#" class="nav-link dropdown-toggle"  data-bs-toggle="dropdown">About Us</a>
             <div class="dropdown-menu fade-up m-0">
               <a href="/about" class="dropdown-item">About</a>
-              <a href="/about/clients" class="dropdown-item"
-                >Clients and Testimonials</a
-              >
+              <a href="/about/clients" class="dropdown-item">Clients and Testimonials</a>
             </div>
           </div>
           <a href="/about/contact" class="nav-item nav-link">Contact</a>
