--- a/output/content/smart-planner/index.html
+++ b/output/content/smart-planner/index.html
@@ -58,99 +58,48 @@
   </head>
 
   <body>
-    <nav
-      class="navbar navbar-expand-lg bg-white navbar-light shadow border-top border-5 border-primary sticky-top p-0"
-    >
-      <a
-        href="/"
-        class="navbar-brand bg-primary d-flex align-items-center px-4 px-lg-5"
-      >
+    <nav class="navbar navbar-expand-lg bg-white navbar-light shadow border-top border-5 border-primary sticky-top p-0" >
+      <a href="/" class="navbar-brand bg-primary d-flex align-items-center px-4 px-lg-5" >
         <h2 class="mb-2 text-white">
-          <img
-            src="https://storage.googleapis.com/xsai/uploads/xsailogo-optimased.png"
-            alt=""
-            style="width: 70%"
-          />
+          <img src="https://storage.googleapis.com/xsai/uploads/xsailogo-optimased.png" alt="Xsai Logo" style="width: 70%" />
         </h2>
       </a>
-      <button
-        type="button"
-        class="navbar-toggler me-4"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarCollapse"
-      >
+      <button type="button" class="navbar-toggler me-4"  data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto p-4 p-lg-0">
           <a href="/" class="nav-item nav-link">Home</a>
           <div class="nav-item dropdown">
-            <a
-              href="#"
-              class="nav-link dropdown-toggle"
-              data-bs-toggle="dropdown"
-              >Services</a
-            >
+            <a  href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
             <div class="dropdown-menu fade-up m-0">
-              <a href="/services/business-intelligence" class="dropdown-item"
-                >Business Intelligence</a
-              >
-              <a href="/services/excel-services" class="dropdown-item"
-                >Excel Services</a
-              >
-              <a href="/services/data-integration" class="dropdown-item"
-                >Data Integration</a
-              >
-              <a href="/services/mobile-app-development" class="dropdown-item"
-                >Mobile App Development</a
-              >
-              <a href="/services/web-development" class="dropdown-item"
-                >Web Development</a
-              >
+              <a href="/services/business-intelligence" class="dropdown-item">Business Intelligence</a>
+              <a href="/services/excel-services" class="dropdown-item" >Excel Services</a>
+              <a href="/services/data-integration" class="dropdown-item">Data Integration</a>
+              <a href="/services/mobile-app-development" class="dropdown-item">Mobile App Development</a>
+              <a href="/services/web-development" class="dropdown-item">Web Development</a>
             </div>
           </div>
           <div class="nav-item dropdown">
-            <a
-              href="#"
-              class="nav-link dropdown-toggle"
-              data-bs-toggle="dropdown"
-              >Products</a
-            >
+            <a href="#" class="nav-link dropdown-toggle"  data-bs-toggle="dropdown" >Products</a>
             <div class="dropdown-menu fade-up m-0">
-              <a href="/xsai-carehouse" class="dropdown-item"
-                >xSai - CareHome</a
-              >
-              <a href="/xsai-fm" class="dropdown-item">xSai - FM</a>
               <a href="/smart-planner" class="dropdown-item">Smart Planner</a>
             </div>
           </div>
           <a href="/blogs" class="nav-item nav-link active">Blogs</a>
           <div class="nav-item dropdown">
-            <a
-              href="#"
-              class="nav-link dropdown-toggle"
-              data-bs-toggle="dropdown"
-              >Our Partners</a
-            >
+            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Our Partners</a>
             <div class="dropdown-menu fade-up m-0">
-              <a href="/saraswat-infotech" class="dropdown-item"
-                >Saraswat Infotech</a
-              >
+              <a href="/saraswat-infotech" class="dropdown-item">Saraswat Infotech</a>
               <a href="/quick-reports" class="dropdown-item">Quick Reports</a>
+              <a href="https://www.xsai.co.uk/dataknobs/" class="dropdown-item">Dataknobs</a>
             </div>
           </div>
           <div class="nav-item dropdown">
-            <a
-              href="#"
-              class="nav-link dropdown-toggle"
-              data-bs-toggle="dropdown"
-              >About Us</a
-            >
+            <a href="#" class="nav-link dropdown-toggle"  data-bs-toggle="dropdown">About Us</a>
             <div class="dropdown-menu fade-up m-0">
               <a href="/about" class="dropdown-item">About</a>
-              <a href="/about/clients" class="dropdown-item"
-                >Clients and Testimonials</a
-              >
+              <a href="/about/clients" class="dropdown-item">Clients and Testimonials</a>
             </div>
           </div>
           <a href="/about/contact" class="nav-item nav-link">Contact</a>
@@ -198,8 +147,8 @@
               <div class="overflow-hidden mb-4">
                 <img
                   class="img-fluid"
-                  src="https://storage.googleapis.com/xsai/slides/smart-planner/slide-1.jpg"
-                  alt=""
+                  src="https://storage.googleapis.com/xsaigokul_gdrive/xsai.co.uk/input/content/products/smartplanner/2-Smart_Planner_Overview/images/Slide300/Slide1.png"
+                  alt="Smart Planner Slide 1"
                 />
               </div>
 
@@ -214,8 +163,8 @@
               <div class="overflow-hidden mb-4">
                 <img
                   class="img-fluid"
-                  src="https://storage.googleapis.com/xsai/slides/smart-planner/slide-2.jpg"
-                  alt=""
+                  src="https://storage.googleapis.com/xsaigokul_gdrive/xsai.co.uk/input/content/products/smartplanner/2-Smart_Planner_Overview/images/Slide300/Slide2.png"
+                  alt="Smart Planner Slide "
                 />
               </div>
 
@@ -230,8 +179,8 @@
               <div class="overflow-hidden mb-4">
                 <img
                   class="img-fluid"
-                  src="https://storage.googleapis.com/xsai/slides/smart-planner/slide-3.jpg"
-                  alt=""
+                  src="https://storage.googleapis.com/xsaigokul_gdrive/xsai.co.uk/input/content/products/smartplanner/2-Smart_Planner_Overview/images/Slide300/Slide3.png"
+                  alt="Smart Planner Slide "
                 />
               </div>
 
@@ -246,8 +195,8 @@
               <div class="overflow-hidden mb-4">
                 <img
                   class="img-fluid"
-                  src="https://storage.googleapis.com/xsai/slides/smart-planner/slide-4.jpg"
-                  alt=""
+                  src="https://storage.googleapis.com/xsaigokul_gdrive/xsai.co.uk/input/content/products/smartplanner/2-Smart_Planner_Overview/images/Slide300/Slide4.png"
+                  alt="Smart Planner Slide "
                 />
               </div>
 
@@ -262,8 +211,8 @@
               <div class="overflow-hidden mb-4">
                 <img
                   class="img-fluid"
-                  src="https://storage.googleapis.com/xsai/slides/smart-planner/slide-5.jpg"
-                  alt=""
+                  src="https://storage.googleapis.com/xsaigokul_gdrive/xsai.co.uk/input/content/products/smartplanner/2-Smart_Planner_Overview/images/Slide300/Slide5.png"
+                  alt="Smart Planner Slide "
                 />
               </div>
 
@@ -278,8 +227,8 @@
               <div class="overflow-hidden mb-4">
                 <img
                   class="img-fluid"
-                  src="https://storage.googleapis.com/xsai/slides/smart-planner/slide-6.jpg"
-                  alt=""
+                  src="https://storage.googleapis.com/xsaigokul_gdrive/xsai.co.uk/input/content/products/smartplanner/2-Smart_Planner_Overview/images/Slide300/Slide6.png"
+                  alt="Smart Planner Slide "
                 />
               </div>
 
@@ -294,8 +243,8 @@
               <div class="overflow-hidden mb-4">
                 <img
                   class="img-fluid"
-                  src="https://storage.googleapis.com/xsai/slides/smart-planner/slide-7.jpg"
-                  alt=""
+                  src="https://storage.googleapis.com/xsaigokul_gdrive/xsai.co.uk/input/content/products/smartplanner/2-Smart_Planner_Overview/images/Slide300/Slide7.png"
+                  alt="Smart Planner Slide "
                 />
               </div>
 
@@ -310,8 +259,8 @@
               <div class="overflow-hidden mb-4">
                 <img
                   class="img-fluid"
-                  src="https://storage.googleapis.com/xsai/slides/smart-planner/slide-8.jpg"
-                  alt=""
+                  src="https://storage.googleapis.com/xsaigokul_gdrive/xsai.co.uk/input/content/products/smartplanner/2-Smart_Planner_Overview/images/Slide300/Slide8.png"
+                  alt="Smart Planner Slide "
                 />
               </div>
 
@@ -326,8 +275,8 @@
               <div class="overflow-hidden mb-4">
                 <img
                   class="img-fluid"
-                  src="https://storage.googleapis.com/xsai/slides/smart-planner/slide-9.jpg"
-                  alt=""
+                  src="https://storage.googleapis.com/xsaigokul_gdrive/xsai.co.uk/input/content/products/smartplanner/2-Smart_Planner_Overview/images/Slide300/Slide9.png"
+                  alt="Smart Planner Slide "
                 />
               </div>
 
@@ -342,8 +291,8 @@
               <div class="overflow-hidden mb-4">
                 <img
                   class="img-fluid"
-                  src="https://storage.googleapis.com/xsai/slides/smart-planner/slide-10.jpg"
-                  alt=""
+                  src="https://storage.googleapis.com/xsaigokul_gdrive/xsai.co.uk/input/content/products/smartplanner/2-Smart_Planner_Overview/images/Slide300/Slide10.png"
+                  alt="Smart Planner Slide "
                 />
               </div>
 
@@ -358,8 +307,8 @@
               <div class="overflow-hidden mb-4">
                 <img
                   class="img-fluid"
-                  src="https://storage.googleapis.com/xsai/slides/smart-planner/slide-11.jpg"
-                  alt=""
+                  src="https://storage.googleapis.com/xsaigokul_gdrive/xsai.co.uk/input/content/products/smartplanner/2-Smart_Planner_Overview/images/Slide300/Slide11.png"
+                  alt="Smart Planner Slide "
                 />
               </div>
 
@@ -374,8 +323,8 @@
               <div class="overflow-hidden mb-4">
                 <img
                   class="img-fluid"
-                  src="https://storage.googleapis.com/xsai/slides/smart-planner/slide-12.jpg"
-                  alt=""
+                  src="https://storage.googleapis.com/xsaigokul_gdrive/xsai.co.uk/input/content/products/smartplanner/2-Smart_Planner_Overview/images/Slide300/Slide12.png"
+                  alt="Smart Planner Slide "
                 />
               </div>
 
@@ -390,8 +339,8 @@
               <div class="overflow-hidden mb-4">
                 <img
                   class="img-fluid"
-                  src="https://storage.googleapis.com/xsai/slides/smart-planner/slide-13.jpg"
-                  alt=""
+                  src="https://storage.googleapis.com/xsaigokul_gdrive/xsai.co.uk/input/content/products/smartplanner/2-Smart_Planner_Overview/images/Slide300/Slide13.png"
+                  alt="Smart Planner Slide "
                 />
               </div>
 
@@ -406,8 +355,8 @@
               <div class="overflow-hidden mb-4">
                 <img
                   class="img-fluid"
-                  src="https://storage.googleapis.com/xsai/slides/smart-planner/slide-14.jpg"
-                  alt=""
+                  src="https://storage.googleapis.com/xsaigokul_gdrive/xsai.co.uk/input/content/products/smartplanner/2-Smart_Planner_Overview/images/Slide300/Slide14.png"
+                  alt="Smart Planner Slide "
                 />
               </div>
 
@@ -422,8 +371,8 @@
               <div class="overflow-hidden mb-4">
                 <img
                   class="img-fluid"
-                  src="https://storage.googleapis.com/xsai/slides/smart-planner/slide-15.jpg"
-                  alt=""
+                  src="https://storage.googleapis.com/xsaigokul_gdrive/xsai.co.uk/input/content/products/smartplanner/2-Smart_Planner_Overview/images/Slide300/Slide15.png"
+                  alt="Smart Planner Slide "
                 />
               </div>
 
@@ -438,8 +387,8 @@
               <div class="overflow-hidden mb-4">
                 <img
                   class="img-fluid"
-                  src="https://storage.googleapis.com/xsai/slides/smart-planner/slide-16.jpg"
-                  alt=""
+                  src="https://storage.googleapis.com/xsaigokul_gdrive/xsai.co.uk/input/content/products/smartplanner/2-Smart_Planner_Overview/images/Slide300/Slide16.png"
+                  alt="Smart Planner Slide "
                 />
               </div>
 
@@ -454,8 +403,8 @@
               <div class="overflow-hidden mb-4">
                 <img
                   class="img-fluid"
-                  src="https://storage.googleapis.com/xsai/slides/smart-planner/slide-17.jpg"
-                  alt=""
+                  src="https://storage.googleapis.com/xsaigokul_gdrive/xsai.co.uk/input/content/products/smartplanner/2-Smart_Planner_Overview/images/Slide300/Slide17.png"
+                  alt="Smart Planner Slide "
                 />
               </div>
 
@@ -470,8 +419,8 @@
               <div class="overflow-hidden mb-4">
                 <img
                   class="img-fluid"
-                  src="https://storage.googleapis.com/xsai/slides/smart-planner/slide-18.jpg"
-                  alt=""
+                  src="https://storage.googleapis.com/xsaigokul_gdrive/xsai.co.uk/input/content/products/smartplanner/2-Smart_Planner_Overview/images/Slide300/Slide18.png"
+                  alt="Smart Planner Slide "
                 />
               </div>
 
@@ -486,8 +435,8 @@
               <div class="overflow-hidden mb-4">
                 <img
                   class="img-fluid"
-                  src="https://storage.googleapis.com/xsai/slides/smart-planner/slide-19.jpg"
-                  alt=""
+                  src="https://storage.googleapis.com/xsaigokul_gdrive/xsai.co.uk/input/content/products/smartplanner/2-Smart_Planner_Overview/images/Slide300/Slide19.png"
+                  alt="Smart Planner Slide "
                 />
               </div>
 
@@ -502,8 +451,8 @@
               <div class="overflow-hidden mb-4">
                 <img
                   class="img-fluid"
-                  src="https://storage.googleapis.com/xsai/slides/smart-planner/slide-20.jpg"
-                  alt=""
+                  src="https://storage.googleapis.com/xsaigokul_gdrive/xsai.co.uk/input/content/products/smartplanner/2-Smart_Planner_Overview/images/Slide300/Slide20.png"
+                  alt="Smart Planner Slide "
                 />
               </div>
 
@@ -518,8 +467,8 @@
               <div class="overflow-hidden mb-4">
                 <img
                   class="img-fluid"
-                  src="https://storage.googleapis.com/xsai/slides/smart-planner/slide-21.jpg"
-                  alt=""
+                  src="https://storage.googleapis.com/xsaigokul_gdrive/xsai.co.uk/input/content/products/smartplanner/2-Smart_Planner_Overview/images/Slide300/Slide21.png"
+                  alt="Smart Planner Slide "
                 />
               </div>
 
@@ -598,7 +547,7 @@
           <div class="col-lg-3 col-md-6">
             <img
               src="https://storage.googleapis.com/customer-website-images/xsai/xsailogo-optimased.png"
-              alt=""
+              alt="Xsai Logo"
               style="width: 80%"
             />
             <p class="mb-2">
