--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
                     <span class="text-primary">Innovative</span> IT Solutions.
                   </h1>
                   <p class="fs-5 fw-medium text-white mb-4 pb-2">
-                    We are proud to announce that we have been awarded as The
-                    Best Business Intelligence Consultancy 2024 - London by
+                    We are proud to announce that we have been awarded as "Most Innovative AI Solutions Provider 2025" The
+                     - London by
                     <strong>SME News London.</strong>
                   </p>
                   <a
